--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "web ui ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node tasks/build.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/mkxiansheng/semi/issues"
   },
-  "homepage": "https://github.com/mkxiansheng/semi#readme"
+  "homepage": "https://github.com/mkxiansheng/semi#readme",
+  "devDependencies": {
+    "node-sass": "^4.12.0"
+  }
 }
